# docker_deploy

./: .env  Dockerfile  pyproject.toml
.devcontainer/: Dockerfile
app/: app.py  apply.py
src/adder/model/: base_model.py
